complete schedule service